--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/ProductionChainOverviewPageView.xaml
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/ProductionChainOverviewPageView.xaml
@@ -27,7 +27,8 @@
 			ItemsSource="{Binding Source={StaticResource Items}}"
 			ScrollViewer.HorizontalScrollBarVisibility="Auto"
 			ScrollViewer.VerticalScrollBarVisibility="Auto"
-			Focusable="False" Margin="0,0,0,0">
+			Focusable="False" Margin="0,0,0,0"
+			Grid.IsSharedSizeScope="True">
 
 			<ListView.View>
 				<GridView>
@@ -63,11 +64,10 @@
 											<Grid.RowDefinitions>
 												<RowDefinition Height="10"/>
 												<RowDefinition Height="32"/>
-												<RowDefinition Height="10"/>
 												<RowDefinition Height="Auto"/>
 											</Grid.RowDefinitions>
 											
-											<Image Grid.Row="1" Grid.Column="0" Stretch="Uniform" Width="32" x:Name="image" Margin="5,0,10,0">
+											<Image Grid.Row="1" Grid.Column="0" Stretch="Uniform" Width="32" x:Name="image" Margin="5,0,10,10">
 												<Image.Source>
 													<Binding Path="Key" ConverterParameter="PopulationGroups">
 														<Binding.Converter>
@@ -77,7 +77,7 @@
 												</Image.Source>
 											</Image>
 
-											<Label Grid.Row="1" Grid.Column="1" Padding="0" Margin="0,6,0,0" VerticalAlignment="Center">
+											<Label Grid.Row="1" Grid.Column="1" Padding="0" Margin="0,6,0,10" VerticalAlignment="Center">
 												<Label.Content>
 													<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
 													<Binding Path="DisplayName" FallbackValue="Allgemein" Mode="OneWay">
@@ -89,10 +89,10 @@
 											</Label>
 
 											<Border 
-												BorderBrush="{DynamicResource NormalBorderBrush}" BorderThickness="0,1,0,0"
-												Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,6,0,0" />
+												BorderBrush="{DynamicResource NormalBorderBrush}" BorderThickness="0,0,0,1"
+												Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" />
 
-											<DockPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
+											<DockPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" ClipToBounds="True">
 												<ItemsPresenter Margin="0,0,0,10" />
 											</DockPanel>
 										</Grid>
@@ -111,7 +111,7 @@
 			
 			<ItemsControl.ItemTemplate>
 				<DataTemplate DataType="viewModels:ProductionChainViewModel">
-					<views:ProductionChainView Margin="10" />
+					<views:ProductionChainView />
 				</DataTemplate>
 			</ItemsControl.ItemTemplate>
 			
