+ Added population calculator view/view model functionality

--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/MainView.xaml
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/MainView.xaml
@@ -91,7 +91,7 @@
 							<views:ProductionChainOverviewPageView />
 						</DataTemplate>
 						<DataTemplate DataType="{x:Type viewModels:PopulationCalculatorPageViewModel}">
-							
+							<views:PopulationCalculatorPageView />
 						</DataTemplate>
 					</components:DictionaryTemplateSelector>
 				</ContentControl.ContentTemplateSelector>
