--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/PopulationCalculatorPageView.xaml
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/PopulationCalculatorPageView.xaml
@@ -2,11 +2,176 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:viewModels="clr-namespace:XyrusWorx.Gaming.AnnoCompanion.ViewModels"
+	xmlns:views="clr-namespace:XyrusWorx.Gaming.AnnoCompanion.Views"
+	xmlns:annoCompanion="clr-namespace:XyrusWorx.Gaming.AnnoCompanion"
+	xmlns:components="clr-namespace:XyrusWorx.UserExperience.Components;assembly=XyrusWorx.Foundation.UserExperience"
+	xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
 	x:Class="XyrusWorx.Gaming.AnnoCompanion.Views.PopulationCalculatorPageView"
-	mc:Ignorable="d" d:DesignHeight="300" d:DesignWidth="300">
+	mc:Ignorable="d" d:DesignHeight="600" d:DesignWidth="800" 
+	d:DataContext="{d:DesignInstance d:Type=viewModels:PopulationCalculatorPageViewModel}">
 
-	<Grid>
+	<Grid Grid.IsSharedSizeScope="True">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="1" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		
+		<Grid.Resources>
+			<CollectionViewSource x:Key="Items" Source="{Binding RequiredProductionChainComponents}">
+				<CollectionViewSource.GroupDescriptions>
+					<PropertyGroupDescription PropertyName="ProductionChainDisplayName"/>
+				</CollectionViewSource.GroupDescriptions>
+				<CollectionViewSource.SortDescriptions>
+					<componentModel:SortDescription PropertyName="SortIndex" Direction="Ascending" />
+				</CollectionViewSource.SortDescriptions>
+			</CollectionViewSource>
+		</Grid.Resources>
+		
+		<Border Grid.Row="0" VerticalAlignment="Top" Height="30" Background="{DynamicResource NormalBackgroundBrush}" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource NormalBorderBrush}" />
+		<Border Grid.Row="1" VerticalAlignment="Top" Height="1" Background="{DynamicResource NormalBorderBrush}" />
+		
+		<ScrollViewer Grid.Row="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+			<Grid>
+				<Grid.Resources>
+					<Style x:Key="HeaderStyle" TargetType="Label">
+						<Setter Property="Background" Value="{DynamicResource NormalBackgroundBrush}" />
+						<Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}" />
+						<Setter Property="BorderThickness" Value="0,0,1,1" />
+						<Setter Property="HorizontalContentAlignment" Value="Center" />
+						<Setter Property="VerticalContentAlignment" Value="Center" />
+						<Setter Property="Padding" Value="5" />
+						<Setter Property="Height" Value="30" />
+					</Style>
+				</Grid.Resources>
 
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="Auto" />
+				</Grid.ColumnDefinitions>
+
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
+				</Grid.RowDefinitions>
+
+				<Label Content="OKZIDENT" Style="{StaticResource HeaderStyle}" Grid.Row="0" Grid.Column="0"/>
+				<Label Content="ORIENT" Style="{StaticResource HeaderStyle}" Grid.Row="0" Grid.Column="1"/>
+
+				<views:PopulationGroupListView DataContext="{Binding Occident}" Grid.Row="1" Grid.Column="0" BorderThickness="0,0,1,0" BorderBrush="{DynamicResource NormalBorderBrush}" />
+				<views:PopulationGroupListView DataContext="{Binding Orient}" Grid.Row="1" Grid.Column="1" BorderThickness="0,0,1,0" BorderBrush="{DynamicResource NormalBorderBrush}" />
+			</Grid>
+		</ScrollViewer>
+
+		<ListView Grid.Row="2" ItemsSource="{Binding Source={StaticResource Items}}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"
+				  Background="Transparent" BorderThickness="0" BorderBrush="Transparent" Margin="0" Padding="0">
+			
+			<ListView.View>
+				<GridView>
+					<GridView.ColumnHeaderContainerStyle>
+						<Style>
+							<Setter Property="FrameworkElement.Visibility" Value="Collapsed" />
+						</Style>
+					</GridView.ColumnHeaderContainerStyle>
+				</GridView>
+			</ListView.View>
+			<ListView.GroupStyle>
+				<GroupStyle>
+					<GroupStyle.ContainerStyle>
+						<Style TargetType="{x:Type GroupItem}">
+							<Setter Property="Template">
+								<Setter.Value>
+									<ControlTemplate TargetType="{x:Type GroupItem}">
+										<Grid>
+											<Grid.RowDefinitions>
+												<RowDefinition Height="10"/>
+												<RowDefinition Height="Auto"/>
+												<RowDefinition Height="Auto"/>
+											</Grid.RowDefinitions>
+
+											<Label Grid.Row="1" Padding="0" Margin="6,6,0,10" VerticalAlignment="Center">
+												<Label.Content>
+													<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
+													<Binding Path="Name" FallbackValue="ALLGEMEIN" Mode="OneWay">
+														<Binding.Converter>
+															<components:UppercaseConverter />
+														</Binding.Converter>
+													</Binding>
+												</Label.Content>
+											</Label>
+
+											<Border 
+												BorderBrush="{DynamicResource NormalBorderBrush}" BorderThickness="0,0,0,1"
+												Grid.Row="1" Grid.Column="0" />
+
+											<DockPanel Grid.Row="2" Grid.Column="0" ClipToBounds="True">
+												<ItemsPresenter Margin="0,0,0,10" />
+											</DockPanel>
+										</Grid>
+									</ControlTemplate>
+								</Setter.Value>
+							</Setter>
+						</Style>
+					</GroupStyle.ContainerStyle>
+				</GroupStyle>
+			</ListView.GroupStyle>
+			
+			<ItemsControl.ItemsPanel>
+				<ItemsPanelTemplate>
+					<WrapPanel />
+				</ItemsPanelTemplate>
+			</ItemsControl.ItemsPanel>
+			<ItemsControl.ItemContainerStyle>
+				<Style TargetType="ListViewItem">
+					<Setter Property="Template">
+						<Setter.Value>
+							<ControlTemplate TargetType="ListViewItem">
+								<ContentPresenter />
+							</ControlTemplate>
+						</Setter.Value>
+					</Setter>
+				</Style>
+			</ItemsControl.ItemContainerStyle>
+			<ItemsControl.ItemTemplate>
+				<DataTemplate DataType="{x:Type viewModels:ProductionChainComponentViewModel}">
+					<Grid Margin="5">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto" SharedSizeGroup="Label" />
+						</Grid.ColumnDefinitions>
+
+						<StackPanel>
+							<Image Width="32" Height="32" Margin="0,0,0,10">
+								<Image.Source>
+									<Binding Path="ProductionBuildingKey" ConverterParameter="Buildings">
+										<Binding.Converter>
+											<annoCompanion:IconKeyConverter />
+										</Binding.Converter>
+									</Binding>
+								</Image.Source>
+							</Image>
+							<Border BorderBrush="{DynamicResource LightBorderBrush}" BorderThickness="0" HorizontalAlignment="Center">
+								<Grid Margin="3">
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition MinWidth="5" Width="Auto" />
+										<ColumnDefinition Width="3" />
+										<ColumnDefinition Width="Auto" />
+									</Grid.ColumnDefinitions>
+
+									<Label VerticalContentAlignment="Center" FontWeight="Bold">
+										<Label.Content>
+											<Binding Path="Count" Mode="OneWay" />
+										</Label.Content>
+									</Label>
+									<Label Content="{Binding ProductionBuildingDisplayName}" HorizontalAlignment="Left" Grid.Column="2" Margin="0,0,3,0" />
+								</Grid>
+							</Border>
+						</StackPanel>
+					</Grid>
+				</DataTemplate>
+			</ItemsControl.ItemTemplate>
+		</ListView>
 	</Grid>
 </UserControl>
+
