--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/PopulationGroupCountEditorView.xaml
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/PopulationGroupCountEditorView.xaml
@@ -4,9 +4,9 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:viewModels="clr-namespace:XyrusWorx.Gaming.AnnoCompanion.ViewModels"
-	xmlns:root="clr-namespace:XyrusWorx.Gaming.AnnoCompanion"
 	xmlns:globalization="clr-namespace:System.Globalization;assembly=mscorlib"
 	xmlns:components="clr-namespace:XyrusWorx.UserExperience.Components;assembly=XyrusWorx.Foundation.UserExperience"
+	xmlns:localComponents="clr-namespace:XyrusWorx.Gaming.AnnoCompanion.Components"
 	x:Class="XyrusWorx.Gaming.AnnoCompanion.Views.PopulationGroupCountEditorView"
 	d:DataContext="{d:DesignInstance d:Type=viewModels:PopulationGroupViewModel}"
 	mc:Ignorable="d">
@@ -20,7 +20,7 @@
 				<Image.Source>
 					<Binding Path="Key" ConverterParameter="PopulationGroups">
 						<Binding.Converter>
-							<root:IconKeyConverter />
+							<localComponents:IconKeyConverter />
 						</Binding.Converter>
 					</Binding>
 				</Image.Source>
