--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/ProductionChainComponentCalculatorView.xaml
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/ProductionChainComponentCalculatorView.xaml
@@ -1,17 +1,17 @@
 ﻿<UserControl 
-	x:Class="XyrusWorx.Gaming.AnnoCompanion.Views.ProductionChainView"
+	x:Class="XyrusWorx.Gaming.AnnoCompanion.Views.ProductionChainComponentCalculatorView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:viewModels="clr-namespace:XyrusWorx.Gaming.AnnoCompanion.ViewModels"
-    xmlns:root="clr-namespace:XyrusWorx.Gaming.AnnoCompanion"
     xmlns:globalization="clr-namespace:System.Globalization;assembly=mscorlib"
     xmlns:components="clr-namespace:XyrusWorx.UserExperience.Components;assembly=XyrusWorx.Foundation.UserExperience"
+    xmlns:localComponents="clr-namespace:XyrusWorx.Gaming.AnnoCompanion.Components"
     mc:Ignorable="d" d:DataContext="{d:DesignInstance d:Type=viewModels:ProductionChainViewModel}"
     d:DesignHeight="300" d:DesignWidth="300">
 
-	<Border BorderBrush="{DynamicResource NormalBorderBrush}" BorderThickness="0,0,0,1" Margin="0,-1,0,0">
+	<Border BorderBrush="{DynamicResource NormalBorderBrush}" BorderThickness="0,0,0,1" Margin="0,0,0,0">
 		<Grid Margin="0">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition MinWidth="120" Width="Auto" SharedSizeGroup="ColumnHeader" />
@@ -72,7 +72,7 @@
 								<Image.Source>
 									<Binding Path="ProductionBuildingKey" ConverterParameter="Buildings">
 										<Binding.Converter>
-											<root:IconKeyConverter />
+											<localComponents:IconKeyConverter />
 										</Binding.Converter>
 									</Binding>
 								</Image.Source>
