+ Added cost and productivity values for buildings + Added trade values for all goods * Decoupled BuildingViewModel from ProductionChainComponentViewModel

--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/MainView.xaml
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/MainView.xaml
@@ -94,6 +94,9 @@
 						<DataTemplate DataType="{x:Type viewModels:PopulationCalculatorPageViewModel}">
 							<views:PopulationCalculatorPageView />
 						</DataTemplate>
+						<DataTemplate DataType="{x:Type viewModels:TradeCalculatorPageViewModel}">
+							<views:TradeCalculatorPageView />
+						</DataTemplate>
 					</components:DictionaryTemplateSelector>
 				</ContentControl.ContentTemplateSelector>
 			</ContentControl>
